vpc.tf
resource "aws_vpc" "vpc" {
	cidr_block       = var.vpc_cidr
	instance_tenancy = "default"
tags = {
		environment = var.environment
	}
}
